data/all_generated_tests/raw_wast_tests/block_StackCorruption_1954.wast
;; 5. **Impeding End Instruction**: Implement a block where the `end` instruction is corrupted by another instruction modifying the stack just before the block’s closure. Testing if the system maintains the stack integrity despite an interrupted `end` validates correct management.

(assert_invalid
  (module (func $impeding-end-instruction
    (block (result i32) (br 0 (i32.const 10)) (i32.add (i32.const 1) (i32.const 2)) end)
  ))
  "type mismatch"
)